cmake_minimum_required(VERSION 3.20)
project(AssigmentThree)

set(CMAKE_CXX_STANDARD 98)

add_executable(AssigmentThree main.cpp Map.h MapImp.h Car.cpp Car.h Cross.cpp Cross.h Metropolis.cpp Metropolis.h Road.cpp Road.h SportsCar.cpp SportsCar.h FamilyCar.cpp FamilyCar.h LuxuryCar.cpp LuxuryCar.h MASERATI.cpp MASERATI.h)
